--- a/SoundCloud.Desktop/Classes/CoverItem.xaml
+++ b/SoundCloud.Desktop/Classes/CoverItem.xaml
@@ -33,6 +33,6 @@
         <TextBlock x:Name="date" Text="0000-00-00" Foreground="Gray" FontSize="16" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Height="20" Width="82"/>
         <TextBlock x:Name="duration" Text="00:00" Foreground="Gray" FontSize="16" Grid.Column="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="38"></TextBlock>
         
-        <fax:IcoMoon x:Name="download" Foreground="#FF3AFF00" Icon="Download" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="25" Opacity="0.4"/>
+        <!--<fax:IcoMoon x:Name="download" Foreground="#FF3AFF00" Icon="Download" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="25" Opacity="0.4"/>-->
     </Grid>
 </UserControl>
