--- a/SoundCloud.Desktop/MainWindow.xaml
+++ b/SoundCloud.Desktop/MainWindow.xaml
@@ -101,8 +101,7 @@
 
             <Popup x:Name="playerPop" IsOpen="False" AllowsTransparency="True" PlacementTarget="{Binding ElementName=playerBbar}" PopupAnimation="Fade" Placement="Top" VerticalOffset="15" IsHitTestVisible="False">
                 <Grid x:Name="playerPopGrid">
-                    <TextBlock x:Name="playerPopTxt" Text="00:00" Margin="0,0,0,0"/>
-                    <Rectangle Height="15" Fill="Black" Width="1" Margin="0,14,0,0"/>
+                    <TextBlock x:Name="playerPopTxt" Text="00:00" FontSize="11" FontWeight="Bold" Margin="0,0,0,13"/>
                 </Grid>
             </Popup>
 
@@ -116,10 +115,10 @@
                 <fax:IcoMoon x:Name="playerNext" Cursor="Hand" Icon="Forward" Foreground="WhiteSmoke" Margin="2.5,0" MouseEnter="Player_MouseEnter" MouseLeave="Player_MouseLeave"/>
             </StackPanel>
 
-            <TextBlock x:Name="playerCurrent" VerticalAlignment="Center" HorizontalAlignment="Right" Text="00:00" FontSize="12" Foreground="#FFD7D7D7" Margin="0,9,0,10" Grid.Column="1" Height="16" Width="28"/>
-            <fax:Pbar x:Name="playerBbar" HorizontalAlignment="Stretch" Margin="5,10" Height="15" VerticalAlignment="Center" Grid.Column="2" Background="#FFCCCCCC" Fill="#FF666666" TextVisibility="Hidden"/>
-            <fax:Pbar x:Name="playerPbar" HorizontalAlignment="Stretch" Margin="5,10" Height="15" VerticalAlignment="Center" Grid.Column="2" Fill="#FFFF5500" TextVisibility="Hidden" Background="{x:Null}" IsHitTestVisible="False"/>
-            <TextBlock x:Name="playerTotal" VerticalAlignment="Center" HorizontalAlignment="Left" Text="00:00" FontSize="12" Foreground="#FFD7D7D7" Grid.Column="3" Height="16" Margin="0,9,0,10" Width="28"/>
+            <TextBlock x:Name="playerCurrent" VerticalAlignment="Center" HorizontalAlignment="Right" Text="00:00" FontSize="12" Foreground="#FFD7D7D7" Margin="0,10" Grid.Column="1" Height="16" Width="28"/>
+            <fax:Pbar x:Name="playerBbar" HorizontalAlignment="Stretch" Margin="5,10,5,8" Height="15" VerticalAlignment="Center" Grid.Column="2" Background="#FFCCCCCC" Fill="#FF666666" TextVisibility="Hidden"/>
+            <fax:Pbar x:Name="playerPbar" HorizontalAlignment="Stretch" Margin="5,10,5,8" Height="15" VerticalAlignment="Center" Grid.Column="2" Fill="#FFFF5500" TextVisibility="Hidden" Background="{x:Null}" IsHitTestVisible="False"/>
+            <TextBlock x:Name="playerTotal" VerticalAlignment="Center" HorizontalAlignment="Left" Text="00:00" FontSize="12" Foreground="#FFD7D7D7" Grid.Column="3" Height="16" Margin="0,10" Width="28"/>
             <fax:IcoMoon x:Name="playerVol" Cursor="Hand" Icon="VolumeHigh" Foreground="LightGray" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="4" Width="30" />
             <Image x:Name="playerImg" Grid.Column="5" Margin="3,5"/>
 
