--- a/SoundCloud.Desktop/Pages/SettingsFrame.xaml
+++ b/SoundCloud.Desktop/Pages/SettingsFrame.xaml
@@ -9,15 +9,15 @@
 	Title="Me">
 
     <Grid Background="White">
-        <ComboBox x:Name="cmbAudioDevice" HorizontalAlignment="Left" Margin="90,22,0,0" Width="200" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,24,0,0" TextWrapping="Wrap" Text="Audio Device:" VerticalAlignment="Top"/>
-        <TextBlock FontSize="20" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Coded by Faxity" VerticalAlignment="Bottom" Margin="0,0,194,10"/>
-        <Button x:Name="btnClearLogin" Content="Clear Auto Login" HorizontalAlignment="Left" Margin="10,74,0,0" VerticalAlignment="Top" Width="114" Height="28"/>
-        <Button x:Name="btnCheckUpdate" Content="Check For Updates" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="114" Height="28"/>
-        <CheckBox x:Name="cbxAutoUpdate" Content="Startup Auto Update Check" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top"/>
-        <fax:IcoMoon Icon="Facebook" Width="20" Height="20" Margin="758,350,0,0"></fax:IcoMoon>
-        <fax:IcoMoon Icon="Twitter" Width="20" Height="20" Margin="733,350,0,0"/>
-        <fax:IcoMoon Icon="SoundCloud" Width="20" Height="20" Margin="708,350,0,0"/>
-        <fax:IcoMoon Icon="Globe" Width="20" Height="20" Margin="683,350,0,0"/>
+        <!--Options-->
+        <ComboBox x:Name="cmbAudioDevice" HorizontalAlignment="Left" Margin="90,63,0,0" Width="200" VerticalAlignment="Top" Height="22" Background="White" BorderBrush="#FFACACAC" Foreground="Black"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" Text="Audio Device:" VerticalAlignment="Top" Height="16" Width="73"/>
+        <Button x:Name="btnClearLogin" Content="Clear Auto Login" HorizontalAlignment="Left" Margin="10,115,0,0" VerticalAlignment="Top" Width="114" Height="28"/>
+        <Button x:Name="btnCheckUpdate" Content="Check For Updates" HorizontalAlignment="Left" Margin="149,115,0,0" VerticalAlignment="Top" Width="114" Height="28" Click="btnCheckUpdate_Click"/>
+        <CheckBox x:Name="cbxAutoUpdate" Content="Startup Auto Update Check" HorizontalAlignment="Left" Margin="10,158,0,0" VerticalAlignment="Top" Height="15" Width="165"/>
+        <!-- Social Links -->
+        <TextBlock FontSize="20" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Coded by Faxity" VerticalAlignment="Top" Margin="0,10,120,0" Height="26" Width="149"/>
+        <fax:IcoMoon Icon="SoundCloud" Width="50" Height="50" Margin="0,0,10,0" Foreground="#FFFF6800"  VerticalAlignment="Top" HorizontalAlignment="Right" MouseDown="Link_MouseDown" MouseEnter="Link_MouseEnter" MouseLeave="Link_MouseLeave" Cursor="Hand"/>
+        <fax:IcoMoon Icon="Globe" Width="50" Height="50" Margin="0,0,65,0" Foreground="#FF008BFF" VerticalAlignment="Top" HorizontalAlignment="Right"  MouseDown="Link_MouseDown" MouseEnter="Link_MouseEnter" MouseLeave="Link_MouseLeave" Cursor="Hand"/>
     </Grid>
 </Page>
