--- a/SoundCloud.Desktop/Pages/QueuePage.xaml
+++ b/SoundCloud.Desktop/Pages/QueuePage.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SoundCloud.Desktop.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="370" d:DesignWidth="788"
       Title="QueuePage">
 
-    <Grid>
-        
+    <Grid x:Name="grid" Background="White">
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" BorderBrush="{x:Null}"/>
     </Grid>
 </Page>
