--- a/SoundCloud.Desktop/Classes/CoverItem.xaml
+++ b/SoundCloud.Desktop/Classes/CoverItem.xaml
@@ -5,12 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fax="http://schemas.faxlib.com/wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="400" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-    <UserControl.Style>
-        <Style TargetType="{x:Type UserControl}">
-            <Setter Property="Height" Value="150"></Setter>
-        </Style>
-    </UserControl.Style>
+             d:DesignHeight="150" d:DesignWidth="400" MinHeight="150" HorizontalAlignment="Stretch" VerticalAlignment="Top">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="8*"/>
@@ -27,12 +22,13 @@
         <Image x:Name="img" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="0" Grid.RowSpan="4"/>
 
         <TextBlock x:Name="title" FontSize="30" Text="Title" Grid.Column="2" Margin="0,0,0,0"></TextBlock>
-        <fax:IcoMoon x:Name="locker" Foreground="#FFFF6800" Icon="Lock" Visibility="Hidden" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Right" Width="10" Height="10"></fax:IcoMoon>
+        <fax:IcoMoon x:Name="locker" Foreground="#FFFF6800" Icon="Lock" Visibility="Hidden" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Right" Width="15" Height="15"/>
 
-        <TextBlock x:Name="user" Foreground="Gray" FontSize="18" Text="User" Grid.Column="2" VerticalAlignment="Center" Height="24" Margin="0,38,0,63" Grid.RowSpan="3"/>
+        <TextBlock x:Name="user" Foreground="Gray" FontSize="18" Text="User" Grid.Column="2" HorizontalAlignment="Left" Height="24" Margin="0,38,0,63" Grid.RowSpan="3"/>
         <TextBlock x:Name="date" Text="0000-00-00" Foreground="Gray" FontSize="16" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Height="20" Width="82"/>
         <TextBlock x:Name="duration" Text="00:00" Foreground="Gray" FontSize="16" Grid.Column="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="38"></TextBlock>
-        
-        <!--<fax:IcoMoon x:Name="download" Foreground="#FF3AFF00" Icon="Download" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="25" Opacity="0.4"/>-->
+
+        <!--<fax:IcoMoon x:Name="download" Margin="25,0,0,0" Foreground="#FF3AFF00" Icon="Download" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="25" Opacity="1"/>-->
+        <fax:IcoMoon x:Name="like" Foreground="#FF444444" Icon="Heart" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="25" Opacity="1"/>
     </Grid>
 </UserControl>
